# kitpos

./: .done.md  Notes.md  README.md  TODO.md  fr_stress.py  pos_dump.py  pos_stress.py  pyproject.toml  python-kitpos.spec
_tmp/: taglist_unpack.md
contrib/: pos_stress.py
doc/: .done.md  Notes.md  POS_err.tsv  TODO.md  qc.st.puml  tp.cr.puml  tp.r.puml  tp.sc.puml  tp.so.puml
kitfr/: cli.py  cmd.py  const.py  exc.py  flag.py  main.py  net.py  rsp.py  tag.py  util.py
kitpos/: __init__.py  cli.py  cmd.py  const.py  errs.py  exc.py  flag.py  main.py  net.py  rsp.py  tag.py  util.py
tests/: __init__.py  samples.py  test_cmd.py  test_rsp.py  test_util.py
