[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "kitpos"
dynamic = ["version"]
description = "Kit POS library"
readme = "README.md"
# requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "TI_Eugene", email = "ti.eugene@gmail.com"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Operating System :: OS Independent",
]
dependencies = [
  "crcmod"
]
urls.Homepage = "https://github.com/tieugene/kitpos"
urls.Source = "https://github.com/tieugene/kitpos"

[project.scripts]
kitpos = "kitpos.main:main"

[tool.setuptools]
packages = ["kitpos"]

[tool.setuptools.dynamic]
version = {attr = "kitpos.__version__"}

[tool.pep8]
max-line-length = "120"

[tool.flake8]
max-line-length = 120

[tool.pylint]
max-line-length = 120
disable = [
  "W0511",  # `to do` keywords
]
